# pkmskill

./: .config.template  .gitignore  CLAUDE.md  README.md  README.md.bak  install.sh  pyproject.toml
.github/workflows/: base-image.yml  ci-test.yml  deploy.yml  docker-publish.yml  release.yml  snapshot.yml
.pkm/Skills/: README.md
.pkm/cursor-commands/: pkm.md
agent/: pkm-agent-daemon.sh
command/cursor/: pkm.advice.md  pkm.help.md  pkm.inbox.md  pkm.md  pkm.project.md  pkm.status.md  pkm.task.md  pkm.todo.md  pkm.upgrade.md
contracts/: task_template.json
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  PRODUCT_PLAN.md
pkm-server/: .config.example.yaml  .coveragerc  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.base  Makefile  database.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  knowledge.py  logging_config.py  main.py  models.py  requirements.txt  run.sh  setup.py  workspace.py
pkm-server/pkm/: __main__.py  cli.py  config.py  constants.py  workspace.py
pkm-server/scripts/: start-server.sh
pkm-server/tests/: conftest.py  test_api.py  test_cli.py  test_cli_runner.py  test_config.py  test_database.py  test_install.py  test_knowledge.py  test_logging_config.py  (+3 more)
scripts/: install.sh  migrate-projects-to-tasks.sh  uninstall.sh
skill/: SKILL.md  _Advisor.md  _Distiller.md  _Help.md  _Inbox.md  _Organizer.md  _PkmSelfManager.md  _ProjectManager.md  _TaskManager.md  _TodoManager.md  _Verifier.md  _WorkspaceManager.md
文章/: Introduce.md  Introduce_juejin.md  Introduce_short.md
(+51 files in other folders)
