[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkm"
version = "0.1.0"
description = "PKM CLI - Personal Knowledge Management"
readme = "pkm-server/README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "requests>=2.31.0",
]

[project.scripts]
pkm = "pkm.cli:cli"

[tool.setuptools.packages.find]
where = ["pkm-server"]
